--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   bibtex_show={false},
   title={The Inequality Multiplier: Market Inelasticity and the Persistence of Wealth Inequality},
   author={Hyland, Charles Christopher and Khemka, Aditya},
+  year={2025},
   abstract={How does the evolution in equity market structure affect wealth inequality? Rising income inequality, combined with inelastic equity markets, drives persistent wealth disparities via large asset price increases—an “inequality multiplier.” Using a general equilibrium model, we identify two channels: the equity investment channel, where wealthy households’ higher propensity to save amplifies asset price booms, and the borrowing channel, where increased indebtedness in the economy raises asset prices via greater rebalancing demand from financial intermediaries. Calibrating a quantitative model to historical data, we find that wealth inequality is self-perpetuating—market inelasticity magnifies effects of rising income inequality, resulting in larger, more persistent wealth disparities. The model replicates observed wealth concentration dynamics, revealing how asset market frictions explain rising wealth inequality beyond existing explanations. The equity investment channel drives long-run trends in wealth inequality, while the borrowing channel drives short-run cycles. Our findings show how recent shifts in financial market structure shape macroeconomic outcomes.},
   preview={inequalitymultiplier.jpg}
   additional_info={*Presentations:*},
