--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,123 +4,21 @@
 @string{aps = {American Physical Society,}}
 
 @article{hylandkhemka,
-  bibtex_show={false},
   title={The Inequality Multiplier: Market Inelasticity and the Persistence of Wealth Inequality},
   author={Hyland, Charles Christopher and Khemka, Aditya},
   year={2025},
   abstract={How does the evolution in equity market structure affect wealth inequality? Rising income inequality, combined with inelastic equity markets, drives persistent wealth disparities via large asset price increases—an “inequality multiplier.” Using a general equilibrium model, we identify two channels: the equity investment channel, where wealthy households’ higher propensity to save amplifies asset price booms, and the borrowing channel, where increased indebtedness in the economy raises asset prices via greater rebalancing demand from financial intermediaries. Calibrating a quantitative model to historical data, we find that wealth inequality is self-perpetuating—market inelasticity magnifies effects of rising income inequality, resulting in larger, more persistent wealth disparities. The model replicates observed wealth concentration dynamics, revealing how asset market frictions explain rising wealth inequality beyond existing explanations. The equity investment channel drives long-run trends in wealth inequality, while the borrowing channel drives short-run cycles. Our findings show how recent shifts in financial market structure shape macroeconomic outcomes.},
   preview={inequalitymultiplier.jpg},
-  additional_info={*Presentations*},
+  additional_info={*Presentations: Asian Finance Association, Taipei (June 2025); Trans-Atlantic Doctoral Conference, London Business School (June 2025); Rethinking Economic Theory Conference, Athens (December 2024)*},
   selected={true},
 }
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+@article{khemkatsomocos,
+  title={Green Policy, Unequal Outcomes},
+  author={Khemka, Aditya and Tsomocos, Dimitrios P.},
+  year={2025},
+  abstract={We investigate how climate-focused financial regulations impact wealth inequality and economic welfare. Who loses on the climate transition path and/or due to environment policy? Which trade-offs should policy makers address? We develop a two-period general equilibrium model with heterogeneous households, incomplete markets, and endogenous climate damages to assess the effects of green capital requirements and carbon taxes. Our findings reveal that while green capital regulations reduce pollution, they also constrain credit allocation, lowering aggregate efficiency and amplifying wealth inequality through labor market distortions. We identify a fundamental trade-off: policies that effectively mitigate environmental harm tend to increase inequality, while those that reduce inequality often fall short in addressing climate risks. We show that carbon taxes outperform green capital regulations in reducing emissions and cause a smaller rise in inequality. Empirical evidence supports these findings, particularly in developed economies where credit contraction exacerbates distributional disparities. Our results highlight the need for policymakers to balance environmental goals with equity considerations in designing climate policy.},
+  preview={climateinequality.jpg},
+  additional_info={*Presentations: Bank of England PPD Research Discussion Group (May 2025); Oxford Saïd - VU SBE Macro-finance Conference, Oxford (June 2024); IV Central Bank Conference on Environmental Risks, Mexico City (December 2023)*},
   selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
 }
