--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   year = {2025},
   abstract={How does the evolution in equity market structure affect wealth inequality? Rising income inequality, combined with inelastic equity markets, drives persistent wealth disparities via large asset price increases—an “inequality multiplier.” Using a general equilibrium model, we identify two channels: the equity investment channel, where wealthy households’ higher propensity to save amplifies asset price booms, and the borrowing channel, where increased indebtedness in the economy raises asset prices via greater rebalancing demand from financial intermediaries. Calibrating a quantitative model to historical data, we find that wealth inequality is self-perpetuating—market inelasticity magnifies effects of rising income inequality, resulting in larger, more persistent wealth disparities. The model replicates observed wealth concentration dynamics, revealing how asset market frictions explain rising wealth inequality beyond existing explanations. The equity investment channel drives long-run trends in wealth inequality, while the borrowing channel drives short-run cycles. Our findings show how recent shifts in financial market structure shape macroeconomic outcomes.},
   preview={inequalitymultiplier.jpg},
-  presentations={*Asian Finance Association, Taipei (June 2025); Trans-Atlantic Doctoral Conference, London Business School (June 2025); Rethinking Economic Theory Conference, Athens (December 2024)*},
+  presentations={Asian Finance Association, Taipei (June 2025); Trans-Atlantic Doctoral Conference, London Business School (June 2025); Rethinking Economic Theory Conference, Athens (December 2024)},
   selected={true},
 }
 
@@ -17,6 +17,6 @@
   year = {2025},
   abstract={We investigate how climate-focused financial regulations impact wealth inequality and economic welfare. Who loses on the climate transition path and/or due to environment policy? Which trade-offs should policy makers address? We develop a two-period general equilibrium model with heterogeneous households, incomplete markets, and endogenous climate damages to assess the effects of green capital requirements and carbon taxes. Our findings reveal that while green capital regulations reduce pollution, they also constrain credit allocation, lowering aggregate efficiency and amplifying wealth inequality through labor market distortions. We identify a fundamental trade-off: policies that effectively mitigate environmental harm tend to increase inequality, while those that reduce inequality often fall short in addressing climate risks. We show that carbon taxes outperform green capital regulations in reducing emissions and cause a smaller rise in inequality. Empirical evidence supports these findings, particularly in developed economies where credit contraction exacerbates distributional disparities. Our results highlight the need for policymakers to balance environmental goals with equity considerations in designing climate policy.},
   preview={climateinequality.jpg},
-  presentations={*Bank of England PPD Research Discussion Group (May 2025); Oxford Saïd - VU SBE Macro-finance Conference, Oxford (June 2024); IV Central Bank Conference on Environmental Risks, Mexico City (December 2023)*},
+  presentations={Bank of England PPD Research Discussion Group (May 2025); Oxford Saïd - VU SBE Macro-finance Conference, Oxford (June 2024); IV Central Bank Conference on Environmental Risks, Mexico City (December 2023)},
   selected={true},
 }
